test/symbolTest/nestedScopes.out

Error in phase Syntax Analysis, line 5:
    Problem detected at 'b'.
