test/symbolTest/nestedScopes.leif
var int a;

function int outer_function(int a) {
    var int b 
    b = a * 2;

    function int inner_function(int c) {
        return c * b;
    }

    return inner_function(3);
}

a = 5;

print(outer_function(a)); # Should print 30